Renamed batch-loader repo

--- a/themes/tech-docs/layout/partials/extensions_dropdown.ejs
+++ b/themes/tech-docs/layout/partials/extensions_dropdown.ejs
@@ -5,20 +5,20 @@
             <ul>
                 <li><a href="<%- url_for("/v1/feathers-hooks-common/") %>" class="nav-link<%- page.repo === 'feathers-hooks-common' ? ' current' : '' %>">feathers-hooks-common</a></li>
 
-                <li><a href="<%- url_for("/v1/feathers-authentication-management/") %>" class="nav-link<%- page.repo === 'feathers-authentication-management' ? ' current' : '' %>">feathers-authentication-management</a></li>
+                <li><a href="<%- url_for("/v1/authentication-management/") %>" class="nav-link<%- page.repo === 'authentication-management' ? ' current' : '' %>">authentication-management</a></li>
             </ul>
         </li>
         <li><h4>Batch Loader</h4></li>
         <li>
             <ul>
-                <li><a href="<%- url_for("/v1/feathers-batchloader/") %>" class="nav-link<%- page.repo === 'feathers-batchloader' ? ' current' : '' %>">feathers-batchloader</a></li>
-                <li><a href="<%- url_for("/v1/feathers-cache") %>" class="nav-link<%- page.repo === 'feathers-cache' ? ' current' : '' %>">feathers-cache</a></li>
+                <li><a href="<%- url_for("/v1/batch-loader/") %>" class="nav-link<%- page.repo === 'batch-loader' ? ' current' : '' %>">batch-loader</a></li>
+                <li><a href="<%- url_for("/v1/cache") %>" class="nav-link<%- page.repo === 'cache' ? ' current' : '' %>">cache</a></li>
             </ul>
         </li>
         <li><h4>Offline First</h4></li>
         <li><ul>
-                <li><a href="<%- url_for("/v1/feathers-offline-snapshot/") %>" class="nav-link<%- page.repo === 'feathers-offline-snapshot' ? ' current' : '' %>">feathers-offline-snapshot</a></li>
-                <li><a href="<%- url_for("/v1/feathers-offline-realtime/") %>" class="nav-link<%- page.repo === 'feathers-offline-realtime' ? ' current' : '' %>">feathers-offline-realtime</a></li>
+                <li><a href="<%- url_for("/v1/offline-snapshot/") %>" class="nav-link<%- page.repo === 'offline-snapshot' ? ' current' : '' %>">offline-snapshot</a></li>
+                <li><a href="<%- url_for("/v1/offline-realtime/") %>" class="nav-link<%- page.repo === 'offline-realtime' ? ' current' : '' %>">offline-realtime</a></li>
             </ul></li>
     </ul>
 </li>
