Added links to repo on landing page.

--- a/themes/tech-docs/layout/index.ejs
+++ b/themes/tech-docs/layout/index.ejs
@@ -28,27 +28,26 @@
     <div class="point">
       <h2>Extend FeathersJS</h2>
       <p>
-        <strong>feathers-hooks-common</strong> contains the official FeathersJS hooks.<br/><br/>
-
-        <strong>feathers-dataloader</strong> transparently reduces the number of DB calls.<br/><br/>
-        <strong>feathers-offline-*</strong> offline-first, realtime synchronization.
+        <strong>feathers-hooks-common</strong> contains the FeathersJS common hooks.<br/><br/>
+        <a href="<%- url_for("/v1/batch-loader") %>"><strong>batch-loader</strong></a> transparently reduces the number of database calls.<br/><br/>
+        <strong>offline-*</strong> offline-first, realtime synchronization.
       </p>
     </div>
 
     <div class="point">
       <h2>Service Adapters</h2>
       <p>
-        <strong>feathers-mongoose-advanced</strong> full access to Mongoose schema features.<br/><br/>
-        <strong>feathers-graphql</strong> for GraphQL.<br/><br/>
-        <strong>feathers-postmark</strong> for Postmark.
+        <strong>mongoose-advanced</strong> full access to Mongoose schema features.<br/><br/>
+        <strong>graphql</strong> for GraphQL, with resolver & batch-loader code generation.<br/><br/>
+        <strong>postmark</strong> for Postmark.
       </p>
     </div>
 
     <div class="point">
       <h2>Framework Integration</h2>
       <p>
-        <strong>feathers-vuex</strong> for Vue/Vuex.<br/><br/>
-        <strong>feathers-redux</strong> for React/Redux.
+        <strong>vuex</strong> for Vue/Vuex.<br/><br/>
+        <strong>redux</strong> for React/Redux.
       </p>
     </div>
 
