Added stubs for authentication-management. Fixed issue with prev/next links.

--- a/themes/tech-docs/layout/index.ejs
+++ b/themes/tech-docs/layout/index.ejs
@@ -30,6 +30,7 @@
       <p>
         <strong>feathers-hooks-common</strong> contains the FeathersJS common hooks.<br/><br/>
         <a href="<%- url_for("/v1/batch-loader") %>"><strong>batch-loader</strong></a> transparently reduces the number of database calls.<br/><br/>
+        <a href="<%- url_for("/v1/authentication-management") %>"><strong>authentication-management</strong></a> sign up verification, password reset, etc.<br/><br/>
         <strong>offline-*</strong> offline-first, realtime synchronization.
       </p>
     </div>
