--- a/themes/tech-docs/layout/layout.ejs
+++ b/themes/tech-docs/layout/layout.ejs
@@ -1,4 +1,6 @@
+<!-- isIndex = true for front page source//index.html --------------------------------------------->
 <% var isIndex = page.path === 'index.html' %>
+<% console.log('...layout.ejs running', page.repo, page.title, isIndex) %>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -49,14 +51,15 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!-- main page styles -->
+    <!-- main page styles ------------------------------------------------------------------------->
     <%- css(isIndex ? 'css/index' : 'css/page') %>
 
-    <!-- this needs to be loaded before guide's inline scripts -->
+    <!-- this needs to be loaded before guide's inline scripts ------------------------------------>
     <script src="<%- url_for("/js/client-bundle.js") %>"></script>
     <script>window.PAGE_TYPE = "<%- page.type %>"</script>
 
-    <!-- ga - ->
+    <!-- ga --------------------------------------------------------------------------------------->
+    <!--
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -73,25 +76,33 @@
       <a class="menu-button"></a>
       <a class="logo" href="/"></a>
     </div>
+
+    <!-- top nav bar ------------------------------------------------------------------------------>
     <%- partial('partials/header') %>
+
+    <!-- body ------------------------------------------------------------------------------------->
     <% if (!isIndex) { %>
       <div id="main" class="fix-sidebar">
         <% if (page.blog_index) { %>
           <%- partial('partials/blog') %>
         <% } else { %>
+          <!--  documentation page ---------------------------------------------------------------->
           <%- body %>
         <% } %>
       </div>
       <script src="<%- url_for("/js/smooth-scroll.min.js") %>"></script>
     <% } else { %>
-      <%- body %>
+      <!-- body: front page ----------------------------------------------------------------------->
+      <% console.log('......index page', body.substr(0,75)) %>
+      <%- partial('index') %>
     <% } %>
 
-    <!-- main custom script for sidebars, version selects etc. -->
+    <!-- main custom script for sidebars, version selects etc. ------------------------------------>
     <script src="<%- url_for("/js/css.escape.js") %>"></script>
     <script src="<%- url_for("/js/common.js") %>"></script>
 
-    <!-- search - ->
+    <!-- search ----------------------------------------------------------------------------------->
+    <!--
     <link href="//cdn.jsdelivr.net/docsearch.js/1/docsearch.min.css" rel='stylesheet' type='text/css'>
     <%- css('css/search') %>
     <script src="//cdn.jsdelivr.net/docsearch.js/1/docsearch.min.js"></script>
@@ -116,7 +127,7 @@
     </script>
     -->
 
-    <!-- fastclick -->
+    <!-- fastclick -------------------------------------------------------------------------------->
     <script src="//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
