--- a/themes/tech-docs/layout/index.ejs
+++ b/themes/tech-docs/layout/index.ejs
@@ -1,4 +1,5 @@
-<% console.log('...index.ejs running') %>
+<% console.log('......index.ejs running') %>
+<!-- body for layout.ejs for front page source/index.md ------------------------------------------->
 <div class="sidebar">
   <div class="sidebar-inner-index">
     <ul class="main-menu">
