--- a/themes/tech-docs/source/css/page.styl
+++ b/themes/tech-docs/source/css/page.styl
@@ -107,9 +107,11 @@
     border-spacing: 0
     border-collapse: collapse
     margin: 1.2em auto
+    margin-left: 1.8em
     padding: 0
     display: block
     overflow-x: auto
+    font-size: smaller
     td, th
       line-height: 1.5em
       padding: .4em .8em
@@ -118,7 +120,10 @@
     th
       font-weight: bold
       text-align: left
-    th, tr:nth-child(2n)
+      background-color: #f8f8f8
+      code
+        background-color: #efefef
+    tr:nth-child(2n)
       background-color: #f8f8f8
       code
         background-color: #efefef
