Front page works. What's New x2 added.

--- a/themes/tech-docs/layout/index.ejs
+++ b/themes/tech-docs/layout/index.ejs
@@ -18,7 +18,7 @@
         Bridging FeathersJS and<br/>real world apps
       </h1>
       <p>
-        <a class="button" href="<%- url_for("/v1/whats-new") %>">What's New</a>
+        <a class="button" href="<%- url_for("/whats-new") %>">What's New</a>
         <a class="button white" href="https://github.com/feathers-plus" target="_blank">GitHub</a>
       </p>
     </div>
