--- a/themes/tech-docs/layout/page.ejs
+++ b/themes/tech-docs/layout/page.ejs
@@ -37,7 +37,7 @@
   <div class="footer">
 
     Caught a mistake or want to contribute to the documentation?
-    <a href="https://github.com/feathers-plus/docs.feathers-plus.org/blob/master/src/<%- page.path.replace(/\.html$/, '.md') %>" target="_blank">
+    <a href="https://github.com/feathers-plus/docs/blob/master/src/<%- page.path.replace(/\.html$/, '.md') %>" target="_blank">
       Edit this page on Github!
     </a>
   </div>
