Added plugins for common hooks api

--- a/themes/tech-docs/layout/index.ejs
+++ b/themes/tech-docs/layout/index.ejs
@@ -41,7 +41,7 @@
       <h2>Service Adapters</h2>
       <p>
         <strong>mongoose-advanced</strong> full access to Mongoose schema features.<br/><br/>
-        <strong>graphql</strong> for GraphQL, with resolver & batch-loader code generation.<br/><br/>
+        <strong>graphql,</strong> the GraphQL service for SQL and non-SQL databases.<br/><br/>
         <strong>postmark</strong> for Postmark.
       </p>
     </div>
