Adding feathers-vuex docs

--- a/themes/tech-docs/layout/index.ejs
+++ b/themes/tech-docs/layout/index.ejs
@@ -49,7 +49,7 @@
     <div class="point">
       <h2>Framework Integration</h2>
       <p>
-        <strong>vuex</strong> for Vue/Vuex.<br/><br/>
+        <a href="<%- url_for("/v1/feathers-vuex") %>"><strong>feathers-vuex</strong></a> for Vue/Vuex.<br/><br/>
         <strong>redux</strong> for React/Redux.
       </p>
     </div>
