--- a/themes/tech-docs/layout/partials/dropdown_frameworks.ejs
+++ b/themes/tech-docs/layout/partials/dropdown_frameworks.ejs
@@ -3,7 +3,7 @@
   <ul class="nav-dropdown">
     <li>
       <ul>
-        <li><a href="<%- url_for("/v1/vuex/") %>" class="nav-link<%- page.repo === 'vuex' ? ' current' : '' %>">vuex</a></li>
+        <li><a href="<%- url_for("/v1/feathers-vuex/") %>" class="nav-link<%- page.repo === 'feathers-vuex' ? ' current' : '' %>">feathers-vuex</a></li>
         <li><a href="<%- url_for("/v1/redux/") %>" class="nav-link<%- page.repo === 'redux' ? ' current' : '' %>">redux</a></li>
       </ul>
     </li>
