Update docs for common-hooks and fix links to feathers-hooks-common

--- a/themes/tech-docs/layout/index.ejs
+++ b/themes/tech-docs/layout/index.ejs
@@ -30,7 +30,7 @@
     <div class="point">
       <h2>Extend FeathersJS</h2>
       <p>
-        <a href="<%- url_for("/v1/feathers-hooks-common") %>"><strong>feathers-hooks-common</strong></a> contains the FeathersJS common hooks.<br/><br/>
+        <a href="https://common-hooks.feathersjs.com"><strong>feathers-hooks-common</strong></a> contains the FeathersJS common hooks.<br/><br/>
         <a href="<%- url_for("/v1/batch-loader") %>"><strong>batch-loader</strong></a> transparently reduces the number of database calls.<br/><br/>
         <a href="<%- url_for("/v1/authentication-management") %>"><strong>authentication-management</strong></a> sign up verification, password reset, etc.<br/><br/>
         <strong>offline-*</strong> offline-first, realtime synchronization.
@@ -42,15 +42,13 @@
       <p>
         <strong>mongoose-advanced</strong> full access to Mongoose schema features.<br/><br/>
         <strong>graphql,</strong> the GraphQL service for SQL and non-SQL databases.<br/><br/>
-        <strong>postmark</strong> for Postmark.
       </p>
     </div>
 
     <div class="point">
       <h2>Framework Integration</h2>
       <p>
-        <a href="https://feathers-vuex.feathers-plus.com" target="_blank"><strong>feathers-vuex</strong></a> for Vue/Vuex.<br/><br/>
-        <strong>redux</strong> for React/Redux.
+        <a href="https://vuex.feathersjs.com" target="_blank"><strong>feathers-vuex</strong></a> for Vue/Vuex.<br/><br/>
       </p>
     </div>
 
