--- a/themes/tech-docs/layout/partials/dropdown_frameworks.ejs
+++ b/themes/tech-docs/layout/partials/dropdown_frameworks.ejs
@@ -3,8 +3,7 @@
   <ul class="nav-dropdown">
     <li>
       <ul>
-        <li><a href="https://feathers-vuex.feathers-plus.com" target="_blank" class="nav-link<%- page.repo === 'feathers-vuex' ? ' current' : '' %>">feathers-vuex</a></li>
-        <li><a href="<%- url_for("/v1/redux/") %>" class="nav-link<%- page.repo === 'redux' ? ' current' : '' %>">redux</a></li>
+        <li><a href="https://vuex.feathersjs.com" target="_blank" class="nav-link<%- page.repo === 'feathers-vuex' ? ' current' : '' %>">feathers-vuex</a></li>
       </ul>
     </li>
   </ul>
