--- a/themes/tech-docs/layout/index.ejs
+++ b/themes/tech-docs/layout/index.ejs
@@ -30,7 +30,7 @@
     <div class="point">
       <h2>Extend FeathersJS</h2>
       <p>
-        <a href="https://common-hooks.feathersjs.com"><strong>feathers-hooks-common</strong></a> contains the FeathersJS common hooks.<br/><br/>
+        <a href="https://hooks-common.feathersjs.com"><strong>feathers-hooks-common</strong></a> contains the FeathersJS common hooks.<br/><br/>
         <a href="<%- url_for("/v1/batch-loader") %>"><strong>batch-loader</strong></a> transparently reduces the number of database calls.<br/><br/>
         <a href="<%- url_for("/v1/authentication-management") %>"><strong>authentication-management</strong></a> sign up verification, password reset, etc.<br/><br/>
         <strong>offline-*</strong> offline-first, realtime synchronization.
